cmake_minimum_required(VERSION 3.9)
project(LeetCode)
set(CMAKE_CXX_STANDARD 11)

#链接库
aux_source_directory(leetcode/editor/cn/include LEETCODE)
add_library(leetcode ${LEETCODE})
LINK_LIBRARIES(leetcode)


add_executable(94-binary-tree-inorder-traversal leetcode/editor/cn/94-binary-tree-inorder-traversal.cpp)
add_executable(144-binary-tree-preorder-traversal leetcode/editor/cn/144-binary-tree-preorder-traversal.cpp)
add_executable(145-binary-tree-postorder-traversal leetcode/editor/cn/145-binary-tree-postorder-traversal.cpp)
add_executable(100-same-tree leetcode/editor/cn/100-same-tree.cpp)
add_executable(102-binary-tree-level-order-traversal leetcode/editor/cn/102-binary-tree-level-order-traversal.cpp)
add_executable(104-maximum-depth-of-binary-tree leetcode/editor/cn/104-maximum-depth-of-binary-tree.cpp)
add_executable(101-symmetric-tree leetcode/editor/cn/101-symmetric-tree.cpp)
add_executable(230-kth-smallest-element-in-a-bst leetcode/editor/cn/230-kth-smallest-element-in-a-bst.cpp)
add_executable(00-count-bitree-node-num leetcode/editor/cn/000-count-bitree-node-num.cpp)
add_executable(111-minimum-depth-of-binary-tree leetcode/editor/cn/111-minimum-depth-of-binary-tree.cpp)
add_executable(752-open-the-lock leetcode/editor/cn/752-open-the-lock.cpp)
add_executable(322-coin-change leetcode/editor/cn/322-coin-change.cpp)
add_executable(300-longest-increasing-subsequence leetcode/editor/cn/300-longest-increasing-subsequence.cpp)
add_executable(543-diameter-of-binary-tree leetcode/editor/cn/543-diameter-of-binary-tree.cpp)
add_executable(000-binary-tree-traverse-template leetcode/editor/cn/000-binary-tree-traverse-template.cpp)
add_executable(000-n-ary-tree-traverse-template leetcode/editor/cn/000-n-ary-tree-traverse-template.cpp)
add_executable(000-binary-tree-level-traverse-template leetcode/editor/cn/000-binary-tree-level-traverse-template-01.cpp)
add_executable(000-binary-tree-level-traverse-template-02 leetcode/editor/cn/000-binary-tree-level-traverse-template-02.cpp)
add_executable(1008-construct-binary-search-tree-from-preorder-traversal leetcode/editor/cn/1008-construct-binary-search-tree-from-preorder-traversal.cpp)
add_executable(105-construct-binary-tree-from-preorder-and-inorder-traversal leetcode/editor/cn/105-construct-binary-tree-from-preorder-and-inorder-traversal.cpp)
add_executable(1022-sum-of-root-to-leaf-binary-numbers leetcode/editor/cn/1022-sum-of-root-to-leaf-binary-numbers.cpp)
add_executable(1026-maximum-difference-between-node-and-ancestor leetcode/editor/cn/1026-maximum-difference-between-node-and-ancestor.cpp)
add_executable(257-binary-tree-paths leetcode/editor/cn/257-binary-tree-paths.cpp)
add_executable(113-path-sum-ii leetcode/editor/cn/113-path-sum-ii.cpp)
add_executable(112-path-sum leetcode/editor/cn/112-path-sum.cpp)
add_executable(114-flatten-binary-tree-to-linked-list leetcode/editor/cn/114-flatten-binary-tree-to-linked-list.cpp)
add_executable(129-sum-root-to-leaf-numbers leetcode/editor/cn/129-sum-root-to-leaf-numbers.cpp)
add_executable(124-binary-tree-maximum-path-sum leetcode/editor/cn/124-binary-tree-maximum-path-sum.cpp)
add_executable(108-convert-sorted-array-to-binary-search-tree leetcode/editor/cn/108-convert-sorted-array-to-binary-search-tree.cpp)
add_executable(110-balanced-binary-tree leetcode/editor/cn/110-balanced-binary-tree.cpp)
add_executable(1110-delete-nodes-and-return-forest leetcode/editor/cn/1110-delete-nodes-and-return-forest.cpp)
add_executable(1261-find-elements-in-a-contaminated-binary-tree leetcode/editor/cn/1261-find-elements-in-a-contaminated-binary-tree.cpp)
add_executable(1315-sum-of-nodes-with-even-valued-grandparent leetcode/editor/cn/1315-sum-of-nodes-with-even-valued-grandparent.cpp)
add_executable(1325-delete-leaves-with-a-given-value leetcode/editor/cn/1325-delete-leaves-with-a-given-value.cpp)
add_executable(226-invert-binary-tree leetcode/editor/cn/226-invert-binary-tree.cpp)
add_executable(25-reverse-nodes-in-k-group leetcode/editor/cn/25-reverse-nodes-in-k-group.cpp)
add_executable(000-reverse-linked-list-template-00 leetcode/editor/cn/000-reverse-linked-list-template-00.cpp)
add_executable(2770-maximum-number-of-jumps-to-reach-the-last-index leetcode/editor/cn/2770-maximum-number-of-jumps-to-reach-the-last-index.cpp)
add_executable(654-maximum-binary-tree leetcode/editor/cn/654-maximum-binary-tree.cpp)
add_executable(106-construct-binary-tree-from-inorder-and-postorder-traversal leetcode/editor/cn/106-construct-binary-tree-from-inorder-and-postorder-traversal.cpp)
add_executable(889-construct-binary-tree-from-preorder-and-postorder-traversal leetcode/editor/cn/889-construct-binary-tree-from-preorder-and-postorder-traversal.cpp)
add_executable(652-find-duplicate-subtrees leetcode/editor/cn/652-find-duplicate-subtrees.cpp)
add_executable(297-serialize-and-deserialize-binary-tree leetcode/editor/cn/297-serialize-and-deserialize-binary-tree.cpp)
add_executable(297-serialize-and-deserialize-binary-tree-2 leetcode/editor/cn/297-serialize-and-deserialize-binary-tree-2.cpp)
add_executable(21-merge-two-sorted-lists leetcode/editor/cn/21-merge-two-sorted-lists.cpp)
add_executable(000-merge-sort leetcode/editor/cn/000-merge-sort.cpp)
add_executable(912-sort-an-array leetcode/editor/cn/912-sort-an-array.cpp)
add_executable(88-merge-sorted-array leetcode/editor/cn/88-merge-sorted-array.cpp)
add_executable(Offer-51-shu-zu-zhong-de-ni-xu-dui-lcof leetcode/editor/cn/Offer-51-shu-zu-zhong-de-ni-xu-dui-lcof.cpp)
add_executable(Offer-51-shu-zu-zhong-de-ni-xu-dui-lcof-2 leetcode/editor/cn/Offer-51-shu-zu-zhong-de-ni-xu-dui-lcof-2.cpp)
add_executable(315-count-of-smaller-numbers-after-self leetcode/editor/cn/315-count-of-smaller-numbers-after-self.cpp)
add_executable(315-count-of-smaller-numbers-after-self-2 leetcode/editor/cn/315-count-of-smaller-numbers-after-self-2.cpp)
add_executable(315-count-of-smaller-numbers-after-self-3 leetcode/editor/cn/315-count-of-smaller-numbers-after-self-3.cpp)
add_executable(327-count-of-range-sum leetcode/editor/cn/327-count-of-range-sum.cpp)
add_executable(303-range-sum-query-immutable leetcode/editor/cn/303-range-sum-query-immutable.cpp)
add_executable(304-range-sum-query-2d-immutable leetcode/editor/cn/304-range-sum-query-2d-immutable.cpp)